@@ -53,3 +53,4 @@ INCLUDE: ../../xs/Function.xs
 INCLUDE: ../../xs/Declare.xs
 INCLUDE: ../../xs/ClosureData.xs
 INCLUDE: ../../xs/API.xs
+INCLUDE: ../../xs/Record.xs
