@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 10;
+use Test::More tests => 11;
 
 use_ok 'FFI::Platypus';
 use_ok 'FFI::Platypus::Declare';
@@ -11,4 +11,5 @@ use_ok 'FFI::Platypus::Type::PointerSizeBuffer';
 use_ok 'FFI::Platypus::Type::StringPointer';
 use_ok 'FFI::Platypus::Lang::ASM';
 use_ok 'FFI::Platypus::Lang::C';
+use_ok 'FFI::Platypus::Record';
 use_ok 'Module::Build::FFI';
